# hippoLBM

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  hipoLBM.cpp  hippoLBM.cpp
.github/workflows/: cmake.yml  cuda.yml  spack.yml
cmake/: hippolbm-config-step1.cmake  hippolbm_add_plugins.cmake
data/: LBM.msp  lbm_cavite_wall.msp  lbm_diff_pressure.msp
data/config/: config_analysis.msp  config_compute_loop.msp  config_initialize.msp  config_io.msp  config_verification.msp  main-config.msp
doc/paper/joss/: paper.bib  paper.md
example/: ball.msp  lbm_cavite.msp  lbm_cavite_wall.msp  lbm_cavity.msp  lbm_couette.msp  lbm_diff_pressure.msp  lbm_diff_pressure_complex_test.msp  lbm_karman_vortex.msp  lbm_lid_driven_cavity.msp  lbm_poiseuille.msp  lbm_prepro_double_couette.msp  lbm_quadrics.msp
include/hippoLBM/compute/: parallel_for_core.hpp  reduce.hpp
include/hippoLBM/core/: box3d.hpp  enum.hpp  point3d.hpp
perf/: perf_couette_1024x1024x1024.msp  perf_couette_128x128x128.msp  perf_couette_2048x2048x2048.msp  perf_couette_256x256x256.msp  perf_couette_512x512x512.msp  perf_couette_64x64x64.msp  perf_couette_common.msp
regression-test/: CMakeLists.txt  regression_lbm_cavite.msp  regression_lbm_cavite_wall.msp  regression_lbm_couette.msp  regression_lbm_diff_pressure.msp  regression_lbm_diff_pressure_complex_test.msp  regression_lbm_lid_driven_cavity.msp  regression_lbm_poiseuille.msp
script/profile/: plot_line_couette.py  plot_line_poiseuille.py  plot_profile.py
src/: CMakeLists.txt
src/bcs/: CMakeLists.txt  cavity.cu  cavity_z_l.cu  lid_driven_cavity.cu  neuman.cu  neuman_z_0.cpp  neuman_z_0.cu  neuman_z_l.cpp  neuman_z_l.cu  post_bounce_back.cu  pre_bounce_back.cu  wall_bounce_back.cpp  wall_bounce_back.cu
src/bcs/include/hipoLBM/bcs/: neumann.hpp
src/bcs/include/hippoLBM/bcs/: bounce_back.hpp  bounce_back_manager.hpp  cavity.hpp  lid_driven_cavity.hpp  neumann.hpp
src/check/: CMakeLists.txt  check_marco_quantities.cpp  plane_velocity_profile.cpp  plane_velocity_profile.cu  plot_over_line.cu  plot_profile.cpp
src/collision/: CMakeLists.txt  bgk.cu  collision_bgk.cpp  collision_bgk.cu  macro_variables.cpp  macro_variables.cu  mrt.cu  streaming.cpp  streaming.cu
src/collision/include/hipoLBM/collision/: collision_bgk.hpp  macro_variables.hpp  streaming.hpp
src/collision/include/hippoLBM/collision/: bgk.hpp  macro_variables.hpp  mrt.hpp  streaming.hpp
src/core/: CMakeLists.txt  next_time_step.cpp  nth_timestep.cpp  sim_continue.cpp
src/grid/: CMakeLists.txt  build_traversal.cpp  define_lbm_fields.cpp  domain_lbm.cpp  init_distributions.cu  init_obst.cu  lbm_parameters.cpp  print_domain.cpp  print_domain_lbm.cpp  reset_grid_data.cpp  set_distribution.cu  set_wall.cpp  update_ghost.cu
src/grid/include/grid/: box.hpp  comm.hpp  domain_lbm.hpp  enum.hpp  field_view.hpp  ghost_manager.hpp  grid.hpp  lbm_domain.hpp  lbm_fields.hpp  operator_ghost_manager.hpp  packers.hpp  parallel_for_core.cu  point.hpp  traversal_lbm.hpp  update_ghost.hpp
src/grid/include/hippoLBM/grid/: box3d.hpp  comm.hpp  domain.hpp  enum.hpp  field_view.hpp  fields.hpp  ghost_manager.hpp  grid.hpp  grid_helper.hpp  grid_region.hpp  init_obst.hpp  lbm_parameters.hpp  make_domain.hpp  make_variant_operator.hpp  operator_ghost_manager.hpp  packers.hpp  parallel_for_core.cu  point.hpp  point3d.hpp  scheme.hpp  set_distribution.hpp  stencil.hpp  traversal_lbm.hpp  update_ghost.hpp
src/grid_lbm/: CMakeLists.txt  build_traversal.cpp  colision_bgk.cpp  domain_lbm.cpp  init_densities.cpp  init_distributions.cpp  init_distributions.cu  init_obst.cpp  init_obst.cu  lbm_parameters.cpp  macro_variables.cpp  neuman_z_0.cpp  neuman_z_l.cpp  print_domain_lbm.cpp  reset_grid_data.cpp  set_wall.cpp  streaming.cpp  update_ghost.cpp  update_ghost.cu
src/grid_lbm/include/grid_lbm/: box.hpp  collision_bgk.hpp  comm.hpp  domain_lbm.hpp  enum.hpp  ghost_manager.hpp  grid.hpp  grid_data_lbm.hpp  init_densities.hpp  init_distributions.hpp  init_obst.hpp  lbm_parameters.hpp  neumann.hpp  operator_ghost_manager.hpp  packers.hpp  parallel_for_box.hpp  parallel_for_core.cu  parallel_for_core.hpp  point.hpp  streaming.hpp  traversal_lbm.hpp  update_ghost.hpp  wrapper_f.hpp
src/io/: CMakeLists.txt  log.cpp  simulation_state.cu  write_paraview.cpp
src/io/include/hipoLBM/io/: write_paraview.hpp  writer.hpp
src/io/include/hippoLBM/io/: simulation_state.hpp  write_paraview.hpp  writer.hpp
src/obstacle/: CMakeLists.txt  display_obstacles.cpp  init_obstacles.cpp  register_quadrics.cpp  register_solid_ball.cpp  register_solid_wall.cpp  update_obstacles.cpp  update_obstacles.cu
src/obstacle/include/hippoLBM/obstacle/: obstacle.hpp  obstacles.hpp
src/prepro/: CMakeLists.txt  init_double_couette.cu
src/prepro/include/hippoLBM/prepro/: double_couette.hpp
